Install DN42 root certificate on hosts

--- a/ansible/roles/base/tasks/main.yml
+++ b/ansible/roles/base/tasks/main.yml
@@ -44,6 +44,8 @@
   tags: firewall
 - import_tasks: mail.yml
 - import_tasks: ssh.yml
+- import_tasks: pki.yml
+  tags: pki
 - import_tasks: prometheus.yml
 
 - name: install motd
