--- a/ansible/roles/wg_interfaces/tasks/main.yml
+++ b/ansible/roles/wg_interfaces/tasks/main.yml
@@ -21,6 +21,7 @@
             }]
         }}
   when:
+  - inventory_hostname in groups.wg_mesh
   - item != inventory_hostname
   - item not in wg_mesh_exclude|default([])
   - inventory_hostname not in hostvars[item].wg_mesh_exclude|default([])
