--- a/ansible/host_vars/us-oxc-bb-1.sesquialtera.dn42.yml
+++ b/ansible/host_vars/us-oxc-bb-1.sesquialtera.dn42.yml
@@ -35,9 +35,8 @@ rip_ifs: [eth0]
 radv_ifs:
   eth0: fda0:281f:5817:200::/64
 
-bgp_as: 4200000002
 bgp_manual_peers:
 - name: int_svc
   template: service_advertisement
   neighbor: range {{ docker_net_v6 }}
-  as: 4200000000
+  as: '{{ bgp_as }}'
