--- a/ansible/roles/adns/tasks/main.yml
+++ b/ansible/roles/adns/tasks/main.yml
@@ -60,8 +60,7 @@
     sysctls:
       net.ipv6.conf.all.disable_ipv6: 0
     env:
-      SA_LOCAL_AS: '4200000000'
-      SA_CONFED: '"{{ bgp_confed }}"'
+      SA_LOCAL_AS: '"{{ bgp_as }}"'
       SA_NEIGHBOR: '{{ internal_ipv6 }}'
       SA_PEER_AS: '"{{ bgp_as }}"'
       SA_IPV4: '{{ adns_ipv4 }}'
