Ensure that the Docker daemon is started/enabled
By default, it is, but it doesn't hurt to make sure (which we do for
other daemons in other roles).

--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -26,6 +26,12 @@
   notify: restart docker
   tags: conf
 
+- name: start docker
+  service:
+    name: docker
+    state: started
+    enabled: yes
+
 - name: create general docker network
   docker_network:
     name: general
