--- a/ansible/group_vars/all/apps.yml
+++ b/ansible/group_vars/all/apps.yml
@@ -57,6 +57,9 @@ anycast_ips:
 # within the network assigned to its host.
 unicast_ips:
   adns:
+    us-lga-bb-1.sesquialtera.dn42:
+      ipv4: 192.168.1.53
+      ipv6: fda0:281f:5817:1::53
     us-oxc-bb-1.sesquialtera.dn42:
       ipv4: 192.168.16.53
       ipv6: fda0:281f:5817:10::53
@@ -64,6 +67,9 @@ unicast_ips:
       ipv4: 192.168.18.53
       ipv6: fda0:281f:5817:12::53
   rdns:
+    us-lga-bb-1.sesquialtera.dn42:
+      ipv4: 192.168.1.54
+      ipv6: fda0:281f:5817:1::54
     us-oxc-bb-1.sesquialtera.dn42:
       ipv4: 192.168.16.54
       ipv6: fda0:281f:5817:10::54
