--- a/ansible/host_vars/us-lga-bb-1.sesquialtera.dn42.yml
+++ b/ansible/host_vars/us-lga-bb-1.sesquialtera.dn42.yml
@@ -10,7 +10,8 @@ loopback_if: loopback-addrs
 public_ifs: [eth0]
 dn42_ifs: [dn42-kioubit, dn42-lutoma, dn42-tech9]
 manual_access_ifs: [dbr-general]
-endpoint_ifs: [dbr-general]
+user_ifs: [int-users]
+endpoint_ifs: [dbr-general, int-users]
 
 wg_public_key: 'pocfYuG45CIvYHDrLK4XV3GrdVVlK6vhKJMEAfq7Dn8='
 wg_mesh_address: 'fe80::1'
@@ -46,6 +47,13 @@ wg_manual_ifs:
     allowed_ips: 0.0.0.0/0,::/0
     endpoint_address: us-chi01.dn42.tech9.io
     endpoint_port: 57047
+- name: int-users
+  address_v4: 192.168.255.1/24
+  address_v6: fda0:281f:5817:ffff::1/64
+  port: 51820
+  peers:
+  - public_key: 'nFz5st0tmBlnXLMPZcRZvsB//2YLX5l7o4CUiq/8ZiQ='
+    allowed_ips: 192.168.255.2/32, fda0:281f:5817:ffff::2/128
 
 bgp_manual_peers:
 - name: dn42_kioubit_nyc
