Move monitoring stack to us-lga-bb-1
The next step in the decommissioning of the oxc site.

--- a/ansible/group_vars/all/apps.yml
+++ b/ansible/group_vars/all/apps.yml
@@ -77,13 +77,13 @@ unicast_ips:
       ipv4: 192.168.18.54
       ipv6: fda0:281f:5817:12::54
   prometheus:
-    us-oxc-ac-1.sesquialtera.dn42:
-      ipv4: 192.168.18.90
-      ipv6: fda0:281f:5817:12::9090
+    us-lga-bb-1.sesquialtera.dn42:
+      ipv4: 192.168.1.90
+      ipv6: fda0:281f:5817:1::9090
   grafana:
-    us-oxc-ac-1.sesquialtera.dn42:
-      ipv4: 192.168.18.30
-      ipv6: fda0:281f:5817:12::3000
+    us-lga-bb-1.sesquialtera.dn42:
+      ipv4: 192.168.1.30
+      ipv6: fda0:281f:5817:1::3000
   ingress-dn42:
     us-lga-bb-1.sesquialtera.dn42:
       ipv4: 192.168.1.42
