Overhaul routing and firewall design
The old design (a single AS with all BGP next-hops in OSPF) was designed
with a single site-local network design in mind: the design used for the
oxc homelab. The two homelab VMs were, from a routing perspective, more
or less the same as the lga backbone VPS: all participated in OSPF and
received all internal routes via BGP (with the lga and oxc backbone
nodes also dealing with external DN42 routes). It was assumed that all
of a site's hosts were connected to the same Ethernet network and could
reach a backbone host directly. Notably, the hypervisor was not on this
network.

Keeping this design precludes experimenting with other network
topologies (e.g. leaf-spine) in the new beh homelab. Furthermore, the
old design is difficult to integrate with cloud-provider networks.
Therefore, we have a new system.

* Routers fall into one of two scopes: backbone or site. The
  "router_role" variable is changed to "router_scope".

* Backbone hosts form a Wireguard mesh. (There is no more "wg_mesh"
  group.) Each participates in OSPF and has an IBGP peering in
  AS4242420703 with every other backbone host, except for those in the
  same site. (This limitation may be addressed in the future.)

* Site (non-backbone) hosts do not participate in the backbone OSPF
  network. They use default routes to reach everything except networks
  in the local site. (This is a change from the previous design, in
  which all internal routes, even from other sites, were sent to routers
  with the "access" role.)

* How routing information is transmitted in a single site depends on the
  site. The router_site_role host variable and a site-role-specific BIRD
  configuration file are used as necessary. (There are currently no
  configuration files for any method, since there are no site networks
  right now. Configurations for a leaf-spine setup for the beh homelab are
  in the works.)

* Backbone routers redistribute local routes into AS4242420703. BGP
  running 

--- a/ansible/group_vars/all/net.yml
+++ b/ansible/group_vars/all/net.yml
@@ -11,4 +11,4 @@ private_net_v4: 192.168.0.0/16
 internal_net_v6: fda0:281f:5817::/48
 
 # Our external DN42 autonomous system number.
-bgp_as: 4242420703
+internal_as: 4242420703
