--- a/ansible/roles/adns/tasks/main.yml
+++ b/ansible/roles/adns/tasks/main.yml
@@ -60,9 +60,9 @@
     sysctls:
       net.ipv6.conf.all.disable_ipv6: 0
     env:
-      SA_LOCAL_AS: '"{{ bgp_as }}"'
+      SA_LOCAL_AS: '4200000999'
       SA_NEIGHBOR: '{{ internal_ipv6 }}'
-      SA_PEER_AS: '"{{ bgp_as }}"'
+      SA_PEER_AS: '4200000998'
       SA_IPV4: '{{ adns_ipv4 }}'
       SA_IPV6: '{{ adns_ipv6 }}'
       SA_HEALTHCHECK_COMMAND: "dig +norec +short @:: {{ adns_healthcheck_zone }} ns | grep -v '^$' >/dev/null"
