Rework HTTP ingress
It's going to be easier to just write manual Caddyfile templates for
each ingress, so this commit makes that change. The Caddy version is
also upgraded to 2.5.2, and permissions on the Caddyfile are fixed.

The DN42 ingress is currently out of commission until I can get ACME
challenges working with anycast.

The next step is to upgrade to Caddy 2.6. It brings HTTP/3 support and
has some minor breaking changes, so that will be its own commit.

--- a/ansible/ingresses.yml
+++ b/ansible/ingresses.yml
@@ -3,23 +3,6 @@
 # This playbook installs HTTP ingresses, which serve static sites and
 # reverse-proxy web applications.
 
-- name: install dn42 ingress
-  gather_facts: no
-  remote_user: '{{ admin_user }}'
-  become: yes
-  hosts: backbones
-  roles:
-  - ingress
-  vars:
-    ingress_name: dn42
-    ingress_tls_issuer: internal
-    ingress_proxy_domains:
-    - name: grafana.sesquialtera.dn42
-      backend: grafana
-    ingress_static_domains:
-    - name: sesquialtera.dn42
-  tags: ingress-dn42
-
 - name: install public ingress
   gather_facts: no
   remote_user: '{{ admin_user }}'
@@ -29,7 +12,5 @@
   - ingress
   vars:
     ingress_name: public
-    ingress_static_domains:
-    - name: matthew.ingwersen.org
-    - name: dn42.sesquialtera.net
+    ingress_caddyfile: public.Caddyfile.j2
   tags: ingress-public
