Upgrade to Caddy 2.6.1
As a result, HTTP/3 is now enabled on ingresses. Firewall rules have
been changed accordingly.

Monitoring is now explicitly enabled in the Caddyfile, since it is no
longer on by default in Caddy 2.6.

--- a/ansible/host_vars/us-lga-bb-1.sesquialtera.dn42.yml
+++ b/ansible/host_vars/us-lga-bb-1.sesquialtera.dn42.yml
@@ -94,3 +94,7 @@ public_port_forwards:
   proto: tcp
   dest_v4: '{{ anycast_ips["ingress-public"].ipv4 }}'
   dest_v6: '{{ anycast_ips["ingress-public"].ipv6 }}'
+- ports: [443]
+  proto: udp
+  dest_v4: '{{ anycast_ips["ingress-public"].ipv4 }}'
+  dest_v6: '{{ anycast_ips["ingress-public"].ipv6 }}'
