Revamp firewall (again!)
There are two major aspects to this:

* The firewall is separated into its own role and accompanying playbook.
  This makes sense given how much we use it!

* Forwarding rules are simplified into a process with two *independent*
  stages:
  1) ensure that the traffic is allowed to enter via the inbound
     interfaces, and
  2) ensure that the traffic is allowed to leave via the outbound
     interface.
  This means that the number of rules to manage scales linearly with
  the number of interface classes/zones, whereas with the previous
  system, it scaled quadratically (since there was in general a ruleset
  for each pair of interface types and each direction). In theory, this
  reduces expressivity, but in practice, our forwarding rules are simple
  enough that the lost expressivity isn't needed. (E.g., previously we
  could explicitly refuse to forward from a public interface to another
  public interface; however, IP address rules on public interfaces
  prevent this from happening anyway.) A cost of this simplification
  might be duplicate or overlapping IP address checks on the inbound and
  outbound sides. However, I don't expect this to be a big deal, and in
  any case I think it's worth it to keep the firewall scheme easy to
  understand.

--- a/ansible/host_vars/us-lga-bb-1.sesquialtera.dn42.yml
+++ b/ansible/host_vars/us-lga-bb-1.sesquialtera.dn42.yml
@@ -108,11 +108,15 @@ bgp_manual_peers:
   neighbor: range {{ docker_net_v6 }}
 
 public_port_forwards:
-- ports: [80, 443]
+- port: 80
   proto: tcp
   dest_v4: '{{ anycast_ips["ingress-public"].ipv4 }}'
   dest_v6: '{{ anycast_ips["ingress-public"].ipv6 }}'
-- ports: [443]
+- port: 443
+  proto: tcp
+  dest_v4: '{{ anycast_ips["ingress-public"].ipv4 }}'
+  dest_v6: '{{ anycast_ips["ingress-public"].ipv6 }}'
+- port: 443
   proto: udp
   dest_v4: '{{ anycast_ips["ingress-public"].ipv4 }}'
   dest_v6: '{{ anycast_ips["ingress-public"].ipv6 }}'
