Fix Caddy reload command
Looks like Caddy 2.6 removed support for single-hyphen flags.

--- a/ansible/roles/ingress/handlers/main.yml
+++ b/ansible/roles/ingress/handlers/main.yml
@@ -3,7 +3,7 @@
 # Hopefully at some point we can replace this with the newer
 # docker_container_exec module.
 - name: reload caddy
-  command: docker exec ingress-{{ ingress_name }} caddy reload -config /etc/caddy/Caddyfile
+  command: docker exec ingress-{{ ingress_name }} caddy reload --config /etc/caddy/Caddyfile
 
 - name: reload firewall
   service:
